--- a/relicdata-merge.ipynb
+++ b/relicdata-merge.ipynb
@@ -213,7 +213,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-13 07:29:04.918547\n",
+      "Modified: 2024-12-13 07:52:55.822636\n",
       "Number of sheets: 11\n",
       "Names of sheets: ['진행상황', '10.중앙박물관(HCI+)', '12.국가유산진흥원 발굴유물DB', '11.국가유산진흥원 직접촬영지원', '13.중앙박물관(LiST 1차)', '15.문화정보원(1차)', '14.중앙박물관(LiST 2차)', '17.문화정보원(2차)', '16.전통문화포털 2D문양', '원천유물명 검토', '시트11']\n",
       "\n",
@@ -294,7 +294,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-13 07:29:26.223184\n",
+      "Modified: 2024-12-13 07:53:16.188540\n",
       "Number of sheets: 14\n",
       "Names of sheets: ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-2', '한글,한자 포함된 캡션']\n",
       "\n",
@@ -389,7 +389,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-13 07:29:36.679685\n",
+      "Modified: 2024-12-13 07:53:26.583883\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -537,14 +537,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (2, 10)\n",
+      "shape: (7, 10)\n",
       "columns:\n",
       "['relic_id', 'relic_name', 'relic_common_name', 'pattern_usage', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_detail']\n"
      ]
     }
    ],
    "source": [
-    "dataframe_info(meta_invalid_df, datadisplay=False)"
+    "dataframe_info(meta_duplicate_df, datadisplay=False)"
    ]
   },
   {
@@ -1119,32 +1119,19 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-13 07:29:36.679685\n",
+      "Modified: 2024-12-13 07:53:26.583883\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
       "Sheet: master\n",
       "  Columns: 38\n",
       "  Rows: 27058\n",
-      "  Nonempty rows: 27058\n",
-      "  First 5 rows:\n",
-      "    (None, None, 'Master', None, None, None, None, 'O', None, None, 'o', None, None, 'o', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None)\n",
-      "    (None, None, '메타데이터', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, '직접촬영만 해당', None, None, None, None, None, None, '한글 캡션', None, None, None, None, None, '영어 캡션', None, None, None, None, None)\n",
-      "    ('check', 'relic_id_img', 'RELIC_ID', 'relic_name', 'relic_name_eng', 'relic_common_name', 'relic_common_name_eng', 'pattern_usage', 'pattern_usage_id', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_id', 'pattern_type_detail', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph')\n",
-      "    ('심사', 'Resize 폴더 File List', '고유ID', '원천유물명', '원천유물명(영어)', '일반유물명', '일반유물명(영어)', '용도', '용도ID', '용도 세분류', '재질', '출처', '시대', '문양형태', '형태ID', '형태세분류', '형태세분류(영어)', '유물식별번호', '수집방법', '촬영일', '촬영도구', '색상', '원천A해상도', '원천S해상도', '원천A파일명', '상징', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph')\n",
-      "    ('', 'PS0100200100103798900000_A1', 'PS0100200100103798900000_A1', '자물쇠', '', '가구자물쇠', '', '생활소품', '', '생활용품', '금속', '국립민속박물관', '근현대', '동물문', '', '물고기문', '', 'PS037989', '이미지DB', '', '', '흑색', '1080, 1080', '1080, 1080', '', '', '이 자물쇠는 한국전통문화유산으로, 금속으로 제작된 가구 자물쇠이다. 전통 가구에 쓰이며 문이나 서랍을 안전하게 잠그는 용도로 활용된다. 내구성 있는 구조와 섬세한 디자인으로 인해 실용성과 미적 가치를 동시에 갖추고 있다.', '믈고기 문양이 새겨진 이 가구 자물쇠에는 자물쇠의 외각에 배치되어 생동감을 준다.. 물고기 문양은 다산과 풍요를 상징하며 가구 사용자에게 행운과 번영을 기원하는 역할을 한다.', '한국전통문양인 물고기문은 물고기의 형태를 바탕으로 구성되어 있다. 물고기 문양은 세밀하게 표현되며, 물고기의 비늘 등 세부적인 부분이 정교하게 새겨져 있어 생동감과 깊이를 더한다.', '문양의 주된 색상은 금속 본연의 색이 강조되었으며, 재질은 금속이다. 물고기문양은 한국전통문화유산에서 번영과 다산을 상징한다. 물고기는 다양한 자연환경에서 살아남는 특성으로 인해 강인함과 적응력을 나타내며, 이러한 특징이 풍요와 다산으로 연결된다.', '가구자물쇠는 전통적인 디자인과 실용적인 기능을 통해 한국의 생활 문화와 깊은 연결을 갖는다. 이 자물쇠는 단순한 도구 이상의 의미를 지니며, 물고기문양이 더해져 다산과 번영을 기원하는 한국전통문화유산으로 자리 잡고 있다. 금속 재질로 제작되어 내구성이 뛰어나며, 전통 가구에 유용하게 사용된다.', '‘한국전통문화유산’, ‘한국전통문양’, 자물쇠, ‘동물문’, ‘물고기문’, 풍요, 다산', 'This lock is a part of the Korean traditional cultural heritage, specifically a metal furniture lock. It is commonly used in traditional furniture to securely lock doors or drawers. It offers both practical and aesthetic value, thanks to its durable structure and delicate design.', 'The furniture lock features fish patterns, adding a visual characteristic to its design. These patterns, placed around the exterior of the lock, symbolize abundance and prosperity, serving to wish luck and prosperity upon the user.', 'The Korean traditional fish pattern is based on the form of a fish with intricate detailing. The scales and other fine features of the fish are intricately carved, adding vibrancy and depth to the design.', 'The main color of the pattern highlights the natural color of metal, and its material is metal. In Korean traditional cultural heritage, the fish pattern symbolizes prosperity and abundance. Fish are known for their resilience in various natural environments, representing strength and adaptability, which are linked to prosperity and abundance.', 'The furniture lock is deeply connected to Korean lifestyle and culture through its traditional design and practical function. More than a simple tool, it embodies the significance of wishing for abundance and prosperity, reinforced by the fish pattern. Made of metal, it is notably durable and serves a functional role in traditional furniture.', '‘Korean Traditional Cultural Heritage’, ‘Korean Traditional Pattern’, lock, ‘Animal Pattern’, ‘Fish Pattern’, prosperity, abundance')\n",
-      "  Tail 5 rows:\n",
-      "    ('', 'PS0100308700200317400000_A1', 'PS0100308700200317400000_A1', '연화보상화문 수막새', '', '수막새', '', '건축물', '', '수막새', '토제', '울산박물관', '통일신라', '식물문', '', '연화보상화문, 보상화문, 연꽃문, 연주문', '', 'PS003174', '이미지DB', '', '', '다자색', '1057, 1080', '1057, 1080', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n",
-      "    ('', 'PS0100308700200317400000_A2', 'PS0100308700200317400000_A2', '연화보상화문 수막새', '', '수막새', '', '건축물', '', '', '토제', '울산박물관', '통일신라', '식물문', '', '', '', 'PS003174', '이미지DB', '', '', '다자색', '1057, 1080', '1057, 1080', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n",
-      "    ('', 'PS0100308700200317400000_A3', 'PS0100308700200317400000_A3', '연화보상화문 수막새', '', '수막새', '', '건축물', '', '', '토제', '울산박물관', '통일신라', '인공물문', '', '', '', 'PS003174', '이미지DB', '', '', '회색', '1057, 1080', '1057, 1080', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n",
-      "    ('', 'PS0100308700200737600000_A1', 'PS0100308700200737600000_A1', '연화문 수막새', '', '수막새', '', '건축물', '', '수막새', '토제', '울산박물관', '통일신라', '식물문', '', '연꽃문, 연주문', '', 'PS007376', '이미지DB', '', '', '구색', '1080, 1048', '1080, 1048', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n",
-      "    ('', 'PS0100308700200737600000_A2', 'PS0100308700200737600000_A2', '연화문 수막새', '', '수막새', '', '건축물', '', '', '토제', '울산박물관', '통일신라', '식물문', '', '', '', 'PS007376', '이미지DB', '', '', '회색', '1080, 1048', '1080, 1048', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n",
-      "    ('', 'PS0100308700200737600000_A3', 'PS0100308700200737600000_A3', '연화문 수막새', '', '수막새', '', '건축물', '', '', '토제', '울산박물관', '통일신라', '인공물문', '', '', '', 'PS007376', '이미지DB', '', '', '자황색', '1080, 1048', '1080, 1048', '', '', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan)\n"
+      "  Nonempty rows: 27058\n"
      ]
     }
    ],
    "source": [
-    "workbook_info(owb1, datadisplay=True)"
+    "workbook_info(owb1, datadisplay=False)"
    ]
   },
   {
@@ -1157,7 +1144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result file=./data/master-14868-163302.xlsx\n"
+      "result file=./data/master-17300-165652.xlsx\n"
      ]
     }
    ],
@@ -1178,7 +1165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 249.73599982261658\n"
+      "Done, eplapsed seconds = 248.5977339744568\n"
      ]
     }
    ],
