invalid key when contain space

--- a/relicdata-merge.ipynb
+++ b/relicdata-merge.ipynb
@@ -213,7 +213,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:01:48.101605\n",
+      "Modified: 2024-12-14 05:53:38.484267\n",
       "Number of sheets: 11\n",
       "Names of sheets: ['진행상황', '10.중앙박물관(HCI+)', '12.국가유산진흥원 발굴유물DB', '11.국가유산진흥원 직접촬영지원', '13.중앙박물관(LiST 1차)', '15.문화정보원(1차)', '14.중앙박물관(LiST 2차)', '17.문화정보원(2차)', '16.전통문화포털 2D문양', '원천유물명 검토', '시트11']\n",
       "\n",
@@ -293,7 +293,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:02:09.376424\n",
+      "Modified: 2024-12-14 05:53:58.941389\n",
       "Number of sheets: 15\n",
       "Names of sheets: ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '한글,한자 포함된 캡션']\n",
       "\n",
@@ -392,7 +392,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:02:16.751568\n",
+      "Modified: 2024-12-14 05:54:05.957158\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -496,8 +496,8 @@
     "metadf[string_cols] = metadf[string_cols].apply(lambda x: x.str.strip())\n",
     "\n",
     "# remove invalid rows \n",
-    "meta_invalid_df = metadf[(metadf['relic_id'].isnull()) | (metadf['relic_id'].str.len() < 1)]\n",
-    "metadf = metadf[(metadf['relic_id'].notnull()) & (metadf['relic_id'].str.len() > 0)]\n",
+    "meta_invalid_df = metadf[(metadf['relic_id'].isnull()) | (metadf['relic_id'].str.len() < 1) | (metadf['relic_id'].str.contains(r\"\\s\"))]\n",
+    "metadf = metadf[(metadf['relic_id'].notnull()) & (metadf['relic_id'].str.len() > 0) & (~metadf['relic_id'].str.contains(r\"\\s\"))]\n",
     "\n",
     "# remove duplicate rows \n",
     "meta_duplicate_df = metadf[metadf.duplicated(subset=['relic_id'], keep='last')]\n",
@@ -716,8 +716,8 @@
     "capdf[string_cols] = capdf[string_cols].apply(lambda x: x.str.strip())\n",
     "\n",
     "# remove invalid rows \n",
-    "cap_invalid_df = capdf[(capdf['relic_id'].isnull()) | (capdf['relic_id'].str.len() < 1)]\n",
-    "capdf = capdf[(capdf['relic_id'].notnull()) & (capdf['relic_id'].str.len() > 0)]\n",
+    "cap_invalid_df = capdf[(capdf['relic_id'].isnull()) | (capdf['relic_id'].str.len() < 1) | (capdf['relic_id'].str.contains(r\"\\s\"))]\n",
+    "capdf = capdf[(capdf['relic_id'].notnull()) & (capdf['relic_id'].str.len() > 0) & (~capdf['relic_id'].str.contains(r\"\\s\"))]\n",
     "\n",
     "# remove duplicate rows \n",
     "cap_duplicate_df = capdf[capdf.duplicated(subset=['relic_id'], keep='last')]\n",
@@ -832,19 +832,22 @@
     "\n",
     "# sheets_all =  ['master']\n",
     "\n",
+    "master_heads = 4\n",
+    "\n",
     "# columns_all:\n",
     "master_columns = [\n",
     "    'check','relic_id_img','relic_id','relic_name','relic_name_eng','relic_common_name','relic_common_name_eng','pattern_usage','pattern_usage_id','pattern_usage_detail','material','source','era','pattern_type','pattern_type_id','pattern_type_detail','pattern_type_detail_eng',\n",
     "    'relic_no','collect','photo_date','photo_eqipment','color','object_img_resolution','pattern_img_resolution','object_file_name','relic_symbol',\n",
     "    '1문단','2문단','3문단','4문단','5문단','6문단','1paragraph','2paragraph','3paragraph','4paragraph','5paragraph','6paragraph'\n",
     "]\n",
+    "\n",
     "master_keep_names = [\n",
     "    'check','relic_id_img','relic_name_eng','relic_common_name_eng','pattern_usage_id','pattern_type_id','pattern_type_detail_eng','relic_no','collect','photo_date','photo_eqipment','color','object_img_resolution','pattern_img_resolution','object_file_name','relic_symbol'\n",
     "]\n",
-    "master_keep_index = [master_columns.index(cn) for cn in master_keep_names] \n",
-    "#print(master_keep_index)\n",
     "\n",
-    "master_heads = 4\n",
+    "master_keep_index = [master_columns.index(cn) for cn in master_keep_names] \n",
+    "\n",
+    "assert len(master_columns) == owb1['master'].max_column, 'master_columns count is not match with master excel sheet max_column'\n",
     "\n",
     "# check skiprows, usecols \n",
     "masdf = pd.read_excel(ofile1, sheet_name='master',  header=None,  skiprows=master_heads, usecols=master_keep_index, names=master_keep_names, na_filter=False, dtype='object', engine='openpyxl',)\n",
@@ -855,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "cf9b8d36-812b-4f4d-ba31-dafbdaec9723",
    "metadata": {},
    "outputs": [],
@@ -865,8 +868,8 @@
     "masdf[string_cols] = masdf[string_cols].apply(lambda x: x.str.strip())\n",
     "\n",
     "# remove invalid rows \n",
-    "mas_invalid_df = masdf[(masdf['relic_id_img'].isnull()) | (masdf['relic_id_img'].str.len() < 1)]\n",
-    "masdf = masdf[(masdf['relic_id_img'].notnull()) & (masdf['relic_id_img'].str.len() > 0)]\n",
+    "mas_invalid_df = masdf[(masdf['relic_id_img'].isnull()) | (masdf['relic_id_img'].str.len() < 1) | (masdf['relic_id_img'].str.contains(r\"\\s\"))]\n",
+    "masdf = masdf[(masdf['relic_id_img'].notnull()) & (masdf['relic_id_img'].str.len() > 0) & (~masdf['relic_id_img'].str.contains(r\"\\s\"))]\n",
     "\n",
     "# remove duplicate rows \n",
     "mas_duplicate_df = masdf[masdf.duplicated(subset=['relic_id_img'], keep='last')]\n",
@@ -879,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "56a64ab0-f20e-492a-a586-dd767505e585",
    "metadata": {},
    "outputs": [
@@ -887,7 +890,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "master rows all=27054, valid=27054, invalid=0, duplicate=0\n"
+      "master rows all=27054, valid=27052, invalid=2, duplicate=0\n"
      ]
     }
    ],
@@ -897,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "1f9f53d4-4fe3-4d16-8ca2-cca06b86d656",
    "metadata": {},
    "outputs": [
@@ -905,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (27054, 17)\n",
+      "shape: (27052, 17)\n",
       "columns:\n",
       "['sheet', 'check', 'relic_id_img', 'relic_name_eng', 'relic_common_name_eng', 'pattern_usage_id', 'pattern_type_id', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol']\n"
      ]
@@ -917,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "68098858-5de7-4d75-8f53-0893b1528d43",
    "metadata": {},
    "outputs": [
@@ -925,7 +928,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (0, 17)\n",
+      "shape: (2, 17)\n",
       "columns:\n",
       "['sheet', 'check', 'relic_id_img', 'relic_name_eng', 'relic_common_name_eng', 'pattern_usage_id', 'pattern_type_id', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol']\n"
      ]
@@ -937,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "a2316b4e-9823-4a46-85e9-ce1c2dd4c358",
    "metadata": {},
    "outputs": [
@@ -957,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "5dff5c51-f647-4d60-b010-bfee6b706ae0",
    "metadata": {},
    "outputs": [],
@@ -972,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "19300831-4308-4564-b570-12db436aed0a",
    "metadata": {},
    "outputs": [],
@@ -993,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "c8a3d722-fc20-42b5-a275-bb2b9d7217b6",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "c76cb22e-a803-4487-86f7-f4dcc2586412",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "7d1cc003-9768-4ca1-b254-eb74834f60d5",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "414b8435-1f40-4e50-b2da-c90088103a80",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1070,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "master inner join rows=21592, outer join rows=27054, meta notfound=128, caption notfound=5459\n"
+      "master inner join rows=21592, outer join rows=27052, meta notfound=126, caption notfound=5457\n"
      ]
     }
    ],
@@ -1077,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "2fbd5229-3aa5-40c2-974c-42cbfffefce2",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1089,7 @@
      "output_type": "stream",
      "text": [
       "relic_id_img not found at meta\n",
-      "count: 128\n",
+      "count: 126\n",
       "values:\n",
       "2744     PS0100101200100217800000_A1\n",
       "3303     PS0100101410100566900000_A1\n",
@@ -1099,7 +1102,7 @@
       "26596    PS0100100800100883000000_A3\n",
       "26598    PS0100100800100889300000_A2\n",
       "26599    PS0100100800100889300000_A3\n",
-      "Name: relic_id_img, Length: 128, dtype: object\n"
+      "Name: relic_id_img, Length: 126, dtype: object\n"
      ]
     }
    ],
@@ -1112,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "1256af53-e04d-4fcd-91a5-25f2655102db",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1124,7 @@
      "output_type": "stream",
      "text": [
       "relic_id_img not found at caption\n",
-      "count: 5459\n",
+      "count: 5457\n",
       "values:\n",
       "7        PS0100200100103812700000_A1\n",
       "212      PS0100200100104029800000_A1\n",
@@ -1134,7 +1137,7 @@
       "27045    PS0100308700200174400000_A1\n",
       "27047    PS0100308700200174400000_A3\n",
       "27050    PS0100308700200317400000_A3\n",
-      "Name: relic_id_img, Length: 5459, dtype: object\n"
+      "Name: relic_id_img, Length: 5457, dtype: object\n"
      ]
     }
    ],
@@ -1147,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "2966f7e1-4aa2-4622-bc8c-c73277020934",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "efec9e6f-147b-4fd7-9264-ac149764dd84",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (27054, 38)\n",
+      "shape: (27052, 38)\n",
       "columns:\n",
       "['check', 'relic_id_img', 'relic_id', 'relic_name', 'relic_name_eng', 'relic_common_name', 'relic_common_name_eng', 'pattern_usage', 'pattern_usage_id', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_id', 'pattern_type_detail', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n"
      ]
@@ -1187,17 +1190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "010d845c-7432-4d34-9f26-138c90ee3fa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# debuging\n",
     "if meta_notfound_rows:\n",
-    "    with open(f'./data/master_notfound_meta-{filename_suffix()}.txt', 'w') as file:\n",
+    "    with open(f'./data/master-notfound-meta-{filename_suffix()}.txt', 'w') as file:\n",
     "         pprint(meta_notfound_values.tolist(), stream=file)\n",
     "if cap_notfound_rows:\n",
-    "    with open(f'./data/master_notfound_caption-{filename_suffix()}.txt', 'w') as file:\n",
+    "    with open(f'./data/master-notfound-caption-{filename_suffix()}.txt', 'w') as file:\n",
     "        pprint(cap_notfound_values.tolist(), stream=file)\n",
     "                \n",
     "innerdf.to_excel(f'./data/innerbook-{filename_suffix()}.xlsx', index=False)\n",
@@ -1214,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "69e7f802-4bbc-4926-9f1e-5cfd752223ea",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "4e64aad6-ecfb-4e5a-b601-7a636478cbb5",
    "metadata": {},
    "outputs": [
@@ -1253,14 +1256,14 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:02:16.751568\n",
+      "Modified: 2024-12-14 05:54:05.957158\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
       "Sheet: master\n",
       "  Columns: 38\n",
-      "  Rows: 27058\n",
-      "  Nonempty rows: 27058\n"
+      "  Rows: 27056\n",
+      "  Nonempty rows: 27056\n"
      ]
     }
    ],
@@ -1270,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "d95f9a64-e7c7-4819-a51f-9a75a3ae4185",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result file=./data/master-23992-140638.xlsx\n"
+      "result file=./data/master-6560-150016.xlsx\n"
      ]
     }
    ],
@@ -1291,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "7fe38f94-66ac-42bc-84f3-c65eae4e74ed",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 302.8229432106018\n"
+      "Done, eplapsed seconds = 410.0350081920624\n"
      ]
     }
    ],
