--- a/relicdata-merge.ipynb
+++ b/relicdata-merge.ipynb
@@ -213,7 +213,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:53:38.484267\n",
+      "Modified: 2024-12-14 07:03:44.052239\n",
       "Number of sheets: 11\n",
       "Names of sheets: ['진행상황', '10.중앙박물관(HCI+)', '12.국가유산진흥원 발굴유물DB', '11.국가유산진흥원 직접촬영지원', '13.중앙박물관(LiST 1차)', '15.문화정보원(1차)', '14.중앙박물관(LiST 2차)', '17.문화정보원(2차)', '16.전통문화포털 2D문양', '원천유물명 검토', '시트11']\n",
       "\n",
@@ -293,7 +293,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:53:58.941389\n",
+      "Modified: 2024-12-14 07:04:05.039951\n",
       "Number of sheets: 15\n",
       "Names of sheets: ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '한글,한자 포함된 캡션']\n",
       "\n",
@@ -392,7 +392,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:54:05.957158\n",
+      "Modified: 2024-12-14 07:04:12.189157\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "cf9b8d36-812b-4f4d-ba31-dafbdaec9723",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "56a64ab0-f20e-492a-a586-dd767505e585",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "1f9f53d4-4fe3-4d16-8ca2-cca06b86d656",
    "metadata": {},
    "outputs": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "68098858-5de7-4d75-8f53-0893b1528d43",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "a2316b4e-9823-4a46-85e9-ce1c2dd4c358",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "5dff5c51-f647-4d60-b010-bfee6b706ae0",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "19300831-4308-4564-b570-12db436aed0a",
    "metadata": {},
    "outputs": [],
@@ -996,20 +996,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "c8a3d722-fc20-42b5-a275-bb2b9d7217b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# join masdf, metadf, capdf \n",
     "\n",
-    "# Find values in masdf['relic_id'] that not metadf['relic_id'] \n",
-    "meta_notfound_values = masdf['relic_id_img'][~masdf['relic_id_img'].isin(metadf['relic_id'])]\n",
-    "meta_notfound_rows = meta_notfound_values.count()\n",
+    "# Find key in masdf which is not in metadf\n",
+    "master_notfound_meta_values = masdf['relic_id_img'][~masdf['relic_id_img'].isin(metadf['relic_id'])]\n",
+    "master_notfound_meta_rows = master_notfound_meta_values.count()\n",
     "\n",
-    "# Find values in masdf['relic_id'] that not metadf['relic_id'] \n",
-    "cap_notfound_values = masdf['relic_id_img'][~masdf['relic_id_img'].isin(capdf['relic_id'])]\n",
-    "cap_notfound_rows = cap_notfound_values.count()\n",
+    "# Find key in masdf which is not in capdf\n",
+    "master_notfound_cap_values = masdf['relic_id_img'][~masdf['relic_id_img'].isin(capdf['relic_id'])]\n",
+    "master_notfound_cap_rows = master_notfound_cap_values.count()\n",
+    "\n",
+    "# Find key in metadf which is not in masdf \n",
+    "meta_notfound_master_values = metadf['relic_id'][~metadf['relic_id'].isin(masdf['relic_id_img'])]\n",
+    "meta_notfound_master_rows = meta_notfound_master_values.count() \n",
+    "\n",
+    "# Find key in capdf which is not in masdf \n",
+    "cap_notfound_master_values = capdf['relic_id'][~capdf['relic_id'].isin(masdf['relic_id_img'])]\n",
+    "cap_notfound_master_rows = cap_notfound_master_values.count() \n",
+    "\n",
+    "# Find key in metdf which is not in capdf \n",
+    "meta_notfound_cap_values = metadf['relic_id'][~metadf['relic_id'].isin(capdf['relic_id'])]\n",
+    "meta_notfound_cap_rows = meta_notfound_cap_values.count() \n",
+    "\n",
+    "# Find key in capdf which is not in metadf\n",
+    "cap_notfound_meta_values = capdf['relic_id'][~capdf['relic_id'].isin(metadf['relic_id'])]\n",
+    "cap_notfound_meta_rows = cap_notfound_meta_values.count() \n",
     "\n",
     "# inner join\n",
     "innerdf = masdf.merge(metadf, how='inner', left_on='relic_id_img', right_on='relic_id', suffixes=['_left1','_right1'], copy=True)  # relic_id added\n",
@@ -1024,45 +1040,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "c76cb22e-a803-4487-86f7-f4dcc2586412",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['check', 'relic_id_img', 'relic_name_eng', 'relic_common_name_eng', 'pattern_usage_id', 'pattern_type_id', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol', 'relic_id_left2', 'relic_name', 'relic_common_name', 'pattern_usage', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_detail', 'relic_id_right2', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n",
-      "['check', 'relic_id_img', 'relic_id', 'relic_name', 'relic_name_eng', 'relic_common_name', 'relic_common_name_eng', 'pattern_usage', 'pattern_usage_id', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_id', 'pattern_type_detail', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# delete relic_id_left2, relic_id_right2\n",
-    "print(innerdf.columns.tolist())\n",
+    "#print(innerdf.columns.tolist())\n",
     "innerdf = innerdf.drop([ 'relic_id_left2','relic_id_right2'], axis=1)\n",
+    "\n",
     "# assign relic_id with relic_id_img \n",
     "innerdf['relic_id'] = innerdf['relic_id_img']\n",
+    "\n",
     "# reorder columns\n",
     "innerdf = innerdf[master_columns]\n",
-    "print(innerdf.columns.tolist())"
+    "#print(innerdf.columns.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "7d1cc003-9768-4ca1-b254-eb74834f60d5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# delete relic_id_left2, relic_id_right2\n",
     "outerdf = outerdf.drop(['relic_id_left2','relic_id_right2'],axis=1)\n",
+    "\n",
+    "# assign relic_id with relic_id_img \n",
     "outerdf['relic_id'] = outerdf['relic_id_img']\n",
+    "\n",
+    "# reorder columns\n",
     "outerdf = outerdf[master_columns]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "414b8435-1f40-4e50-b2da-c90088103a80",
    "metadata": {},
    "outputs": [
@@ -1070,87 +1084,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "master inner join rows=21592, outer join rows=27052, meta notfound=126, caption notfound=5457\n"
+      "master inner join rows=21592, outer join rows=27052\n",
+      "\n",
+      "master  notound in meta=126,   master not found in caption=5457\n",
+      "meta    notound in master=6637, meta not found in caption=9970\n",
+      "caption notound in master=2005,  caption not found in meta=7\n"
      ]
     }
    ],
    "source": [
-    "print(f'master inner join rows={mas_inner_rows}, outer join rows={mas_outer_rows}, meta notfound={meta_notfound_rows}, caption notfound={cap_notfound_rows}')"
+    "print(f'master inner join rows={mas_inner_rows}, outer join rows={mas_outer_rows}') \n",
+    "print()\n",
+    "print(f'master  notound in meta={master_notfound_meta_rows},   master not found in caption={master_notfound_cap_rows}') \n",
+    "print(f'meta    notound in master={meta_notfound_master_rows}, meta not found in caption={meta_notfound_cap_rows}') \n",
+    "print(f'caption notound in master={cap_notfound_master_rows},  caption not found in meta={cap_notfound_meta_rows}') \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "2fbd5229-3aa5-40c2-974c-42cbfffefce2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "relic_id_img not found at meta\n",
-      "count: 126\n",
-      "values:\n",
-      "2744     PS0100101200100217800000_A1\n",
-      "3303     PS0100101410100566900000_A1\n",
-      "3410     PS0100101410101060900000_A1\n",
-      "10462                       21248_A1\n",
-      "10463                       21249_A1\n",
-      "                    ...             \n",
-      "26593    PS0100100800100882600000_A3\n",
-      "26595    PS0100100800100883000000_A2\n",
-      "26596    PS0100100800100883000000_A3\n",
-      "26598    PS0100100800100889300000_A2\n",
-      "26599    PS0100100800100889300000_A3\n",
-      "Name: relic_id_img, Length: 126, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "if meta_notfound_rows:\n",
-    "    print('relic_id_img not found at meta')\n",
-    "    print(f'count: {meta_notfound_rows}') \n",
-    "    print(f'values:\\n{meta_notfound_values}') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "1256af53-e04d-4fcd-91a5-25f2655102db",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "relic_id_img not found at caption\n",
-      "count: 5457\n",
-      "values:\n",
-      "7        PS0100200100103812700000_A1\n",
-      "212      PS0100200100104029800000_A1\n",
-      "1062     PS0100300500100105000000_A1\n",
-      "1063     PS0100300500100106300000_A1\n",
-      "1066     PS0100300500100111600000_A2\n",
-      "                    ...             \n",
-      "27040    PS0100100900100528000000_A2\n",
-      "27041    PS0100100900100528000000_A3\n",
-      "27045    PS0100308700200174400000_A1\n",
-      "27047    PS0100308700200174400000_A3\n",
-      "27050    PS0100308700200317400000_A3\n",
-      "Name: relic_id_img, Length: 5457, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "if cap_notfound_rows:\n",
-    "    print('relic_id_img not found at caption')\n",
-    "    print(f'count: {cap_notfound_rows}') \n",
-    "    print(f'values:\\n{cap_notfound_values}') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "2966f7e1-4aa2-4622-bc8c-c73277020934",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "id": "efec9e6f-147b-4fd7-9264-ac149764dd84",
    "metadata": {},
    "outputs": [
@@ -1190,19 +1142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "id": "010d845c-7432-4d34-9f26-138c90ee3fa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# debuging\n",
-    "if meta_notfound_rows:\n",
+    "if master_notfound_meta_rows:\n",
     "    with open(f'./data/master-notfound-meta-{filename_suffix()}.txt', 'w') as file:\n",
-    "         pprint(meta_notfound_values.tolist(), stream=file)\n",
-    "if cap_notfound_rows:\n",
-    "    with open(f'./data/master-notfound-caption-{filename_suffix()}.txt', 'w') as file:\n",
-    "        pprint(cap_notfound_values.tolist(), stream=file)\n",
-    "                \n",
+    "         pprint(master_notfound_meta_values.tolist(), stream=file)\n",
+    "if master_notfound_cap_rows:\n",
+    "    with open(f'./data/master-notfound-cap-{filename_suffix()}.txt', 'w') as file:\n",
+    "        pprint(master_notfound_cap_values.tolist(), stream=file)\n",
+    "\n",
+    "if meta_notfound_master_rows:\n",
+    "    with open(f'./data/meta-notfound-master-{filename_suffix()}.txt', 'w') as file:\n",
+    "        pprint(meta_notfound_master_values.tolist(), stream=file)\n",
+    "if cap_notfound_master_rows:\n",
+    "    with open(f'./data/cap-notfound-master-{filename_suffix()}.txt', 'w') as file:\n",
+    "        pprint(cap_notfound_master_values.tolist(), stream=file)\n",
+    "        \n",
+    "if meta_notfound_cap_rows:\n",
+    "    with open(f'./data/meta-notfound-cap-{filename_suffix()}.txt', 'w') as file:\n",
+    "        pprint(meta_notfound_cap_values.tolist(), stream=file)\n",
+    "if cap_notfound_meta_rows:\n",
+    "    with open(f'./data/cap-notfound-meta-{filename_suffix()}.txt', 'w') as file:\n",
+    "        pprint(cap_notfound_meta_values.tolist(), stream=file)\n",
+    "        \n",
     "innerdf.to_excel(f'./data/innerbook-{filename_suffix()}.xlsx', index=False)\n",
     "outerdf.to_excel(f'./data/outerbook-{filename_suffix()}.xlsx', index=False)\n"
    ]
@@ -1217,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "id": "69e7f802-4bbc-4926-9f1e-5cfd752223ea",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "4e64aad6-ecfb-4e5a-b601-7a636478cbb5",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1222,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 05:54:05.957158\n",
+      "Modified: 2024-12-14 07:04:12.189157\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -1273,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "id": "d95f9a64-e7c7-4819-a51f-9a75a3ae4185",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result file=./data/master-6560-150016.xlsx\n"
+      "result file=./data/master-16092-160848.xlsx\n"
      ]
     }
    ],
@@ -1294,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "7fe38f94-66ac-42bc-84f3-c65eae4e74ed",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 410.0350081920624\n"
+      "Done, eplapsed seconds = 317.9912667274475\n"
      ]
     }
    ],
