--- a/relicdata-merge.ipynb
+++ b/relicdata-merge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "0cdde40a-7535-4fba-8461-116105a020cc",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "e8266c56-de86-4553-aa62-a01ded53666d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "5683e96f-3695-4ffe-8cab-d8ed689bbe8e",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "b40de977-f842-4212-978d-c3488a66c936",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "52509231-f94e-4d4f-82a2-b85d626b19db",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "38c0b9bd-e699-4c01-8e23-9fe4fc1dccc4",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "408a54d1-d67c-469d-bf28-a3279d110808",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "58790b49-2163-4086-829c-a712ef28dfb6",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "38e60dc0-a51f-4859-8e5f-fe49476bbd1f",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "fb7426d3-6092-474e-b20e-dd8479faf055",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 07:03:44.052239\n",
+      "Modified: 2024-12-14 10:02:14.810407\n",
       "Number of sheets: 11\n",
       "Names of sheets: ['진행상황', '10.중앙박물관(HCI+)', '12.국가유산진흥원 발굴유물DB', '11.국가유산진흥원 직접촬영지원', '13.중앙박물관(LiST 1차)', '15.문화정보원(1차)', '14.중앙박물관(LiST 2차)', '17.문화정보원(2차)', '16.전통문화포털 2D문양', '원천유물명 검토', '시트11']\n",
       "\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "876b552a-a18b-4f7a-88dd-51e230dd02ef",
    "metadata": {},
    "outputs": [
@@ -293,9 +293,9 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 07:04:05.039951\n",
-      "Number of sheets: 15\n",
-      "Names of sheets: ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '한글,한자 포함된 캡션']\n",
+      "Modified: 2024-12-14 10:02:40.223701\n",
+      "Number of sheets: 16\n",
+      "Names of sheets: ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '1214-2', '한글,한자 포함된 캡션']\n",
       "\n",
       "Sheet: 캡션검수 1125\n",
       "  Columns: 27\n",
@@ -364,8 +364,13 @@
       "\n",
       "Sheet: 1214\n",
       "  Columns: 21\n",
-      "  Rows: 2943\n",
+      "  Rows: 1943\n",
       "  Nonempty rows: 1943\n",
+      "\n",
+      "Sheet: 1214-2\n",
+      "  Columns: 24\n",
+      "  Rows: 1978\n",
+      "  Nonempty rows: 1978\n",
       "\n",
       "Sheet: 한글,한자 포함된 캡션\n",
       "  Columns: 1\n",
@@ -382,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "9043361c-1ffe-4b2f-a3fa-216537c65f19",
    "metadata": {},
    "outputs": [
@@ -392,7 +397,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 07:04:12.189157\n",
+      "Modified: 2024-12-14 10:02:52.061255\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -420,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "9f0e81af-2cc8-470a-81be-b657110017d2",
    "metadata": {},
    "outputs": [],
@@ -485,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "c7e04f1b-2d38-40f3-aa95-27ee71a0f368",
    "metadata": {},
    "outputs": [],
@@ -510,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "46025f7d-032c-477d-9eeb-ffa67dbb6874",
    "metadata": {},
    "outputs": [
@@ -528,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "f5b01822-08be-4f9e-8f5a-bcc10b18c58e",
    "metadata": {},
    "outputs": [
@@ -548,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "69e4a912-dff2-495d-9158-e0c9ff880080",
    "metadata": {},
    "outputs": [
@@ -568,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "8e317160-c3fe-4230-93aa-fac3a79fa5e4",
    "metadata": {},
    "outputs": [
@@ -588,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "id": "e55b68dc-0629-40ed-989b-47b2cb095e7f",
    "metadata": {},
    "outputs": [],
@@ -603,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "id": "4c696b86-c83e-469e-97ec-d59662e488dc",
    "metadata": {},
    "outputs": [],
@@ -611,7 +616,7 @@
     "# caption file \n",
     "\n",
     "cap_sheets_all =  ['캡션검수 1125', '캡션검수1126(수정)', '캡션검수1201', '캡션검수1202', '캡션검수1205', '캡션검수1206', '캡션검수1207(1,4문단)', '캡션검수1209(1,4문단)', '캡션검수1210(1,4문단)', \n",
-    "                 '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '한글,한자 포함된 캡션']  # 15\n",
+    "                 '캡션검수1211(1,4문단)', '캡션검수1212(1,4문단)', '캡션검수1213(1문단,4문단)', '캡션검수1213-1(1문단,4문단)', '1214', '1214-2', '한글,한자 포함된 캡션']  # 15\n",
     "cap_sheets_exclude = ['한글,한자 포함된 캡션']\n",
     "\n",
     "assert set(cap_sheets_all) == set(iwb2.sheetnames), 'cap_sheets_all is not mismatch with caption excell sheets'\n",
@@ -691,6 +696,11 @@
     "      'usecols': cap_usecols, \n",
     "      'dataframe': None,\n",
     "    },\n",
+    "    { 'sheet': '1214-2',\n",
+    "      'skiprows': cap_skiprows, \n",
+    "      'usecols': cap_usecols, \n",
+    "      'dataframe': None,\n",
+    "    },    \n",
     "]    \n",
     "\n",
     "assert [sheet for sheet in cap_sheets_all if sheet not in cap_sheets_exclude] == [info['sheet'] for info in capinfo], \"capinfo sheet name or order not mismatch with valid sheets\"\n",
@@ -706,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "id": "fb20dbee-20d4-459c-9ec7-a48d132882f2",
    "metadata": {},
    "outputs": [],
@@ -730,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "id": "a9d9ad22-4ac7-4c38-9e4f-dc98ab87d08a",
    "metadata": {},
    "outputs": [
@@ -738,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "caption rows all=28133, valid=23600, invalid=0, duplicate=4533\n"
+      "caption rows all=30110, valid=24352, invalid=0, duplicate=5758\n"
      ]
     }
    ],
@@ -748,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "id": "2f71a0c3-a841-4000-a750-468e2f1d432a",
    "metadata": {},
    "outputs": [
@@ -756,7 +766,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (23600, 14)\n",
+      "shape: (24352, 14)\n",
       "columns:\n",
       "['sheet', 'relic_id', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n"
      ]
@@ -768,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "8a9fb109-e0a8-4a56-a240-07771abf9887",
    "metadata": {},
    "outputs": [
@@ -788,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "id": "6513564d-6ab5-4996-90eb-c1ea593a3937",
    "metadata": {},
    "outputs": [
@@ -796,7 +806,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (4533, 14)\n",
+      "shape: (5758, 14)\n",
       "columns:\n",
       "['sheet', 'relic_id', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n"
      ]
@@ -808,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "id": "5b6cbb3f-c798-4ea5-bd7d-28582ae93d0e",
    "metadata": {},
    "outputs": [],
@@ -823,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "ca659cb4-d462-41e5-8305-d0b08b60d0d9",
    "metadata": {},
    "outputs": [],
@@ -858,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "id": "cf9b8d36-812b-4f4d-ba31-dafbdaec9723",
    "metadata": {},
    "outputs": [],
@@ -882,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "id": "56a64ab0-f20e-492a-a586-dd767505e585",
    "metadata": {},
    "outputs": [
@@ -900,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "id": "1f9f53d4-4fe3-4d16-8ca2-cca06b86d656",
    "metadata": {},
    "outputs": [
@@ -920,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "id": "68098858-5de7-4d75-8f53-0893b1528d43",
    "metadata": {},
    "outputs": [
@@ -940,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "id": "a2316b4e-9823-4a46-85e9-ce1c2dd4c358",
    "metadata": {},
    "outputs": [
@@ -960,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "id": "5dff5c51-f647-4d60-b010-bfee6b706ae0",
    "metadata": {},
    "outputs": [],
@@ -975,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "id": "19300831-4308-4564-b570-12db436aed0a",
    "metadata": {},
    "outputs": [],
@@ -996,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "id": "c8a3d722-fc20-42b5-a275-bb2b9d7217b6",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "id": "c76cb22e-a803-4487-86f7-f4dcc2586412",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "id": "7d1cc003-9768-4ca1-b254-eb74834f60d5",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "id": "414b8435-1f40-4e50-b2da-c90088103a80",
    "metadata": {},
    "outputs": [
@@ -1084,11 +1094,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "master inner join rows=21592, outer join rows=27052\n",
+      "master inner join rows=22319, outer join rows=27052\n",
       "\n",
-      "master  notound in meta=126,   master not found in caption=5457\n",
-      "meta    notound in master=6637, meta not found in caption=9970\n",
-      "caption notound in master=2005,  caption not found in meta=7\n"
+      "master  notound in meta=126,   master not found in caption=4730\n",
+      "meta    notound in master=6637, meta not found in caption=9218\n",
+      "caption notound in master=2030,  caption not found in meta=7\n"
      ]
     }
    ],
@@ -1102,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "id": "2966f7e1-4aa2-4622-bc8c-c73277020934",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (21592, 38)\n",
+      "shape: (22319, 38)\n",
       "columns:\n",
       "['check', 'relic_id_img', 'relic_id', 'relic_name', 'relic_name_eng', 'relic_common_name', 'relic_common_name_eng', 'pattern_usage', 'pattern_usage_id', 'pattern_usage_detail', 'material', 'source', 'era', 'pattern_type', 'pattern_type_id', 'pattern_type_detail', 'pattern_type_detail_eng', 'relic_no', 'collect', 'photo_date', 'photo_eqipment', 'color', 'object_img_resolution', 'pattern_img_resolution', 'object_file_name', 'relic_symbol', '1문단', '2문단', '3문단', '4문단', '5문단', '6문단', '1paragraph', '2paragraph', '3paragraph', '4paragraph', '5paragraph', '6paragraph']\n"
      ]
@@ -1122,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "id": "efec9e6f-147b-4fd7-9264-ac149764dd84",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "id": "010d845c-7432-4d34-9f26-138c90ee3fa9",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "id": "69e7f802-4bbc-4926-9f1e-5cfd752223ea",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "id": "4e64aad6-ecfb-4e5a-b601-7a636478cbb5",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1232,7 @@
      "text": [
       "\n",
       "Workbook Properties:\n",
-      "Modified: 2024-12-14 07:04:12.189157\n",
+      "Modified: 2024-12-14 10:02:52.061255\n",
       "Number of sheets: 1\n",
       "Names of sheets: ['master']\n",
       "\n",
@@ -1239,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "id": "d95f9a64-e7c7-4819-a51f-9a75a3ae4185",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result file=./data/master-16092-160848.xlsx\n"
+      "result file=./data/master-16092-190816.xlsx\n"
      ]
     }
    ],
@@ -1260,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "id": "7fe38f94-66ac-42bc-84f3-c65eae4e74ed",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done, eplapsed seconds = 317.9912667274475\n"
+      "Done, eplapsed seconds = 380.1683602333069\n"
      ]
     }
    ],
